--- a/skel/.htaccess
+++ b/skel/.htaccess
@@ -1,12 +1,23 @@
+################################################################################
+##            _____                        __     _____   __        __          
+##           /  _  \   ______ ______ _____/  |_  /     \ |__| ____ |__|         
+##          /  /_\  \ /  ___//  ___// __ \   __\/  \ /  \|  |/    \|  |         
+##         /    |    \\___ \ \___ \\  ___/|  | /    Y    \  |   |  \  |         
+##         \____|__  /____  >____  >\___  >__| \____|__  /__|___|  /__|         
+##                 \/     \/     \/     \/             \/        \/             
+## -----------------------------------------------------------------------------
+##          Designed and Developed by Brad Jones <brad @="bjc.id.au" />         
+## -----------------------------------------------------------------------------
+################################################################################
+
 <IfModule mod_rewrite.c>
 	# Turn rewriting on
 	RewriteEngine on
 	
-	# Set the base location - It is assumed the assets folder is located
-	# in the root of the web server document root. If not this would need to be
-	# changed. Along with some other hard coded paths. So I would advise
-	# leaving it in the root of your project. Maybe one day I will make this
-	# more configuarable...
+	# Set the base location
+	# Assuming this file is writeable by the webserver, possibly dangerous I
+	# guess but if your happy to accept the risk especially while in development
+	# this will be set to the correct path by the AssetMini View Helper class.
 	RewriteBase /assets/
 	
 	# If the files don't already exist, lets use PHP to create them.
