--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,12 @@
 	"type": "gears-assetmini",
 	"require": 
 	{
-		"php": ">=5.3",
-		"gears/installer": "x",
-		"gears/string": "x",
-		"tedivm/jshrink": "v0.5.2",
-		"natxet/CssMin": "3.0.2",
-		"oyejorge/less.php": "~1.5"
+		"php": ">=5.4",
+		"gears/installer": "*",
+		"gears/string": "*",
+		"tedivm/jshrink": "*",
+		"natxet/CssMin": "*",
+		"oyejorge/less.php": "*"
 	},
 	"autoload":
 	{
