added new sass compiler dep

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 		"gears/string": "*",
 		"tedivm/jshrink": "*",
 		"natxet/CssMin": "*",
-		"oyejorge/less.php": "*"
+		"oyejorge/less.php": "*",
+		"leafo/scssphp": "*"
 	},
 	"autoload":
 	{
